added food.html and css also fixed link underlining and color issues

--- a/Lulu's Eatery/Food.html
+++ b/Lulu's Eatery/Food.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="food.css">
+	
   </head>
   <body>
     <div id = root>
@@ -27,12 +29,25 @@
 				<div class = bodyGrid>
 					<div class=maincontent>
 						<img src="assets/header.png" alt="lulu's local eatery"><br>
-						<h2>Our Mission</h2>
-							<p>Our mission is to offer a sustainable dining option that is incredibly delicious and doesn't take itself too seriously.</p>
-							<p>The variety of ecosystems supports a large number of wildflower species.</p>
-							<img src="assets/homeimg.png" width="150" height="200" alt="home image" class="floatright">
-						<h3>Explore the Beauty <br>of Door Country Wildflowers...</h3>
-							<p>With five state parks, tons of country parks, and private nature sanctuaries, Door Country is teeming with natural areas for you to stalk your favorite wildflowers.</p>
+						<a href=""><h3>Click here for available discounts !</h3></a>
+            <div class="grid-container">
+							<div class="grid-item"><a target="_blank" href="assets/food1.jpg">
+									<img src="assets/food1.jpg" alt="Buffalo Coliflower" width="400" height="300">
+								</a>
+							</div>
+							<div class="grid-item"><a target="_blank" href="assets/food2.jpg">
+									<img src="assets/food2.jpg" alt="" width="400" height="300">
+								</a>
+							</div>
+							<div class="grid-item"><a target="_blank" href="assets/food3.jpg">
+									<img src="assets/food3.jpg" alt="Butternut squash" width="400" height="300">
+								</a>
+							</div>
+							<div class="grid-item"><a target="_blank" href="assets/food4.jpg">
+									<img src="assets/food4.jpg" alt="" width="400" height="300">
+								</a>
+							</div>
+							</div>
 					</div>
 					<div class=asidebar>
 						<aside role="complementary">
