Fixed small issue with h3 tag in food.html

--- a/Lulu's Eatery/Food.html
+++ b/Lulu's Eatery/Food.html
@@ -29,7 +29,7 @@
 				<div class = bodyGrid>
 					<div class=maincontent>
 						<img src="assets/header.png" alt="lulu's local eatery"><br>
-						<a href=""><h3>Click here for available discounts !</h3></a>
+						<h3 href="">Click here for available discounts !</h3>
             <div class="grid-container">
 							<div class="grid-item"><a target="_blank" href="assets/food1.jpg">
 									<img src="assets/food1.jpg" alt="Buffalo Coliflower" width="400" height="300">
