Added a border and animation
Well, I wanted to do more, but my plan didn't work out. I added a border to the nav and a keyframe animation to out logo in the header.

--- a/sustain.html
+++ b/sustain.html
@@ -10,7 +10,7 @@
   <body>
     <div id = root>
 		<div class= bannerArea>
-			<a href="index.html#logo"><img src="assets/logo2.png" alt="lulu's home logo"></a>
+			<a href="index.html#logo"><img src="assets/logo2.png" id="logo" alt="lulu's home logo"></a>
 		</div>
 		<div id = navArea>
 			<nav>
