--- a/submit.html
+++ b/submit.html
@@ -7,7 +7,26 @@
 	body { text-align: center; 
 			background-color: #a6c0cf;
 	}
-	
+	.button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 </style>
 </head>
 <body>
@@ -16,6 +35,6 @@
 <br><br><br><br>
 <h3>Your question, comment, or concern has been sent.</h3>
 <br><br><br><br>
-<a href="contact.html"><button>Go back</button></a>
+<a href="contact.html"><button class="button">Go back</button></a>
 </body>
 </html>
