chopped the banner and made the footer consistent

--- a/sustain.html
+++ b/sustain.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-	<link rel="stylesheet" type="text/css" href="sustain.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="sustain.css">
   </head>
   <body>
     <div id = root>
@@ -26,7 +25,7 @@
 			</nav>
 		</div>
 				<div class = grid>
-                    <div class=item1><p>Our mission is to offer a sustainable dining option that is incredibly delicious and doesn't take itself too seriously. Lulu's is a sustainable neighborhood cafe that started out as a food truck in 2012 and opened up a brick and mortar in 2014.</p>
+                    <div class=item1><p>Lulu's is a sustainable neighborhood cafe that started out as a food truck in 2012 and opened up a brick and mortar in 2014.</p>
                         <b>Sustainability is our goal, we practice it by: </b>
                         <ul>
                             <li>recycling and composting 95% of our waste</li>
@@ -65,10 +64,12 @@
 						ping pong bar above lulu's open all day // full bar open 5pm-12am<br><br>
 						PURCHASE A GIFT CARD<br><br>
 						Copyright &copy; 2018<br><br>
-						<a href="#logo"><img src="assets/totop.png" alt="to top" height="100px"></a>
 					  </div>
 					  <div id = location>
 						<img src="assets/location.png" alt="location">
+					  </div>
+                    <div id = totop>
+						<a href="#logo"><img src="assets/totop.png" alt="to top" height="100px"></a>
 					  </div>
 		          </div>
       </div>
