--- a/Food.html
+++ b/Food.html
@@ -29,7 +29,7 @@
 				<div class = bodyGrid>
 					<div class=maincontent>
 						<img src="assets/header.png" alt="lulu's local eatery"><br>
-						<h3 href="">Click here for available discounts !</h3>
+						<h3><a href="index.html">Click here for available discounts !</a></h3>
             <div class="grid-container">
 							<div class="grid-item"><a target="_blank" href="assets/food1.jpg">
 									<img src="assets/food1.jpg" alt="Buffalo Coliflower" width="400" height="300">
