--- a/location.html
+++ b/location.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" type="text/css" href="styles/location.css">
+	<link rel="stylesheet" type="text/css" href="styles/location.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
     <div id = root>
