--- a/sustain.html
+++ b/sustain.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" type="text/css" href="styles/sustain.css">
+	<link rel="stylesheet" type="text/css" href="styles/sustain.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
     <div id = root>
@@ -28,15 +29,15 @@
                     <div class=item1><p>Lulu's is a sustainable neighborhood cafe that started out as a food truck in 2012 and opened up a brick and mortar in 2014.</p>
                         <b>Sustainability is our goal, we practice it by: </b>
                         <ul>
-                            <li>recycling and composting 95% of our waste</li>
-                            <li>offering a 100% plant-based menu using all natural, local and organic ingredients whenever possible</li>
-                            <li>prioritizing a living wage and flexible work/life balance for our team</li>
-                            <li><a href="discount.html">offering 15% off to customers who ride their bike to the restaurant</a></li>
-                            <li>buying our employees a bike if they work for Lulu's for 2 years</li>
-                            <li>repurposing material to use in our restuarant space</li>
-                            <li>offering a seasonal menu and minimizing food waste by anticipating customer demand</li>
-                            <li>using 100% compostable to-go materials</li>
-                            <li><a href="https://greendiningalliance.org/about-gda/our-certification/">getting a five star certification through the Green Dining Alliance (GDA)</a></li>
+                            <li id="liItem">recycling and composting 95% of our waste</li>
+                            <li id="liItem">offering a 100% plant-based menu using all natural, local and organic ingredients whenever possible</li>
+                            <li id="liItem">prioritizing a living wage and flexible work/life balance for our team</li>
+                            <li id="liItem"><a href="discount.html">offering 15% off to customers who ride their bike to the restaurant</a></li>
+                            <li id="liItem">buying our employees a bike if they work for Lulu's for 2 years</li>
+                            <li id="liItem">repurposing material to use in our restuarant space</li>
+                            <li id="liItem">offering a seasonal menu and minimizing food waste by anticipating customer demand</li>
+                            <li id="liItem">using 100% compostable to-go materials</li>
+                            <li id="liItem"><a href="https://greendiningalliance.org/about-gda/our-certification/">getting a five star certification through the Green Dining Alliance (GDA)</a></li>
                         </ul>
                         We get our coffee from <a href="https://www.sumpcoffee.com/">Sump</a> and our vegan baked goods from <a href="http://whiskstl.com/">Whisk</a>.
                     </div>
