end of sprint 2 upload
End of Sprint 2 upload

--- a/sustain.html
+++ b/sustain.html
@@ -1,3 +1,4 @@
+<!--Nathan designed, edited-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -20,6 +21,7 @@
 					<li><a href="food.html">Food</a></li>
 					<li><a href="location.html">Location</a></li>
 					<li><a href="sustain.html">Sustainability</a></li>
+                    <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
