--- a/location.html
+++ b/location.html
@@ -1,3 +1,4 @@
+<!--Jasmine designed, Nathan edited -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,7 +7,7 @@
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="styles/location.css">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	
   </head>
   <body>
     <div id = root>
@@ -20,6 +21,7 @@
 					<li><a href="food.html">Food</a></li>
 					<li><a href="location.html">Location</a></li>
 					<li><a href="sustain.html">Sustainability</a></li>
+                    <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
