--- a/gallery.html
+++ b/gallery.html
@@ -35,72 +35,72 @@
                     </div>
                     <div class="item item--large">
                       <div class="item--details">
-                        Muffin jelly gingerbread 
+                        Winter Quinoa Bowl 
                       </div>
                     </div>
                     <div class="item item--medium">
                       <div class="item--details">
-                        sesame snaps chocolate
+                        Fresh Ingredients
                       </div>
                     </div>
                     <div class="item item--large">
                       <div class="item--details">
-                        Oat cake
+                        A Spread of Classics
                       </div>
                     </div>
                     <div class="item item--full">
                       <div class="item--details">
-                         jujubes cheesecake
+                         Thai Crunch Wrap
                       </div>
                     </div>
                     <div class="item item--medium">
                       <div class="item--details">
-                        Dragée pudding brownie
+                        Patio View with Tasty Food
                       </div>
                     </div>
                     <div class="item item--large">
                       <div class="item--details">
-                        Oat cake
+                        Black Bean Jalapeno Burger
                       </div>
                     </div>
                     <div class="item">
                       <div class="item--details">
-                        powder toffee
+                        Black Bean Burger
                       </div>
                     </div>
                     <div class="item item--medium">
                       <div class="item--details">
-                        pudding cheesecake
+                        Salad and Buffalo Cauliflower
                       </div>
                     </div>
                     <div class="item item--large">
                       <div class="item--details">
-                        toffee bear claw 
+                        Sweets by Whisk 
                       </div>
                     </div>
                     <div class="item">
                       <div class="item--details">
-                        cake cookie croissant
+                        Bahn Mi Bowl
+                       </div>
+                    </div>
+                    <div class="item item--medium">
+                      <div class="item--details">
+                        Fresh Food
                       </div>
                     </div>
                     <div class="item item--medium">
                       <div class="item--details">
-                        liquorice sweet roll
-                      </div>
-                    </div>
-                    <div class="item item--medium">
-                      <div class="item--details">
-                        chocolate marzipan
+                        Black Bean Burger
                       </div>
                     </div>
                     <div class="item item--large">
                       <div class="item--details">
-                        danish dessert lollipop
+                        Black Bean Burger
                       </div>
                     </div>
                     <div class="item">
                       <div class="item--details">
-                        sugar plum dragée
+                        Tots!
                       </div>
                     </div>
                     </div>
