fixed weird haze on index and order html pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="index.html#logo"><img src="assets/logo2.png" id="logo" alt="lulu's home logo"></a>
 		</div>
 		<div id = navArea>
-			<nav id="navbar">
+			<nav>
 				<ul id="navul">		
 					<li><a href="index.html">Home</a></li>
 					<li><a href="food.html">Food</a></li>
