Added order to food nav bar

--- a/food.html
+++ b/food.html
@@ -1,4 +1,3 @@
-<!--Gabe created and designed, Henry contributed research for foods -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -21,7 +20,7 @@
 					<li><a href="food.html">Food</a></li>
 					<li><a href="location.html">Location</a></li>
 					<li><a href="sustain.html">Sustainability</a></li>
-                    <li><a href="order.html">Order Now</a></li>
+					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -53,28 +52,7 @@
 					<div class=asidebar>
 						<aside role="complementary">
 							<h3>The Menu</h3>
-								<p class="news">
-                                    Lulu's takes pride in offering options for special dietary concerns, not only for vegans, but much of our food is Kosher, Halal, and gluten-free. <br>
-                                    Gluten is a protein commonly found in grains such as wheat, barley, rye and triticale which gives certain individuals such as those with Celiac's disease problems. <br>
-                                    Halal is a dietary standard followed by some Muslims as outlined in the Quaran. Halal does not strictly refer to diet, but in this case we're talking specifically about diet. The foods and drinks that are NOT considered Halal are called Harem. A Halal diet cannot include: 
-                            <ul>
-                                <li>Alcoholic drinks and intoxicants</li>
-                                <li>Animal fats</li>
-                                <li>Vanilla extract</li>
-                                <li>Pork and pork products</li>
-                                <li>Gelatine</li>
-                                <li>Cheese, yogurt and ice cream made with animal rennet, vanilla extra, gelatine, pepsin or lipase</li>
-                                <li>Non certified meat and poultry</li>
-                                <li>Any product prepared with alcohol or animal fats</li>
-                            </ul>
-                            Kosher is the dietary standard of Jewish law. A kosher diet cannot include:
-                            <ul>
-                                <li>Pork, reptiles, amphibians and insects</li>
-                                <li>Shellfish, shrimp and scallops</li>
-                                <li>Animal products or byproducts made from non certified animals</li>
-                            </ul>
-                            <br>At Lulu's, we take our customer's speicial dietary concerns as seriously as we take our approach to sustainability. As such, our menu will have this information outlined for our customers' potential concerns.
-                                    <br>Offering you a rotating selection of specialty and local craft beer, local artisan tea, carbonated juice, kombucha, coffee by <a href="https://www.sumpcoffee.com/" alt="Link to Sump Coffee"> Sump</a>, and baked goods by <a href="http://whiskstl.com/" alt="Like to Whisk">Whisk</a> we present to you our menu.<br><br>
+								<p class="news">Offering you a rotating selection of specialty and local craft beer, local artisan tea, carbonated juice, kombucha, coffee by <a href="https://www.sumpcoffee.com/" alt="Link to Sump Coffee"> Sump</a>, and baked goods by <a href="http://whiskstl.com/" alt="Like to Whisk">Whisk</a> we present to you our menu.<br><br>
 								<a href="assets/Lulus_Menu_Fall17.pdf" alt="Go to menu"><img src="assets/menu2.png" alt="menu"></a>
 								<p/>
 							<h3>Specials</h3>
