Changes to Order Page and Contact
Made changes to the order page, now has working pop-ups and menu items. Contact page isn't correct still, but did a little changing to help fix the issue.

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
 						<p>Required fields are marked with an asterisk *</p>
 						<form  method="post" action="http://webdevbasics.net/scripts/demo.php">
 						<label for="myName">* Name:</label>
-						<input type="text" name="myName" id="myName" required="required" placeholder="John Doe">
+						<input class="indexinput" type="text" name="myName" id="myName" required="required" placeholder="John Doe">
 						<label for="myEmail">* E-mail:</label>
-						<input type="text" name="myEmail" id="myEmail" required="required" placeholder="ilovelulus@yahoo.com">
+						<input class="indexinput" type="text" name="myEmail" id="myEmail" required="required" placeholder="ilovelulus@yahoo.com">
 						<label for="myRating">Rating (1 - 10):</label>
-						<input type="range" name="myRating" id="myRating" min="1" max="10">
+						<input class="indexinput" type="range" name="myRating" id="myRating" min="1" max="10">
 						<label for="myComments">* Comments:</label>
-						<textarea name="myComments" id="myComments" rows="4"cols="30"></textarea>
-						<input id="mySubmit" type="submit" value="Submit" required="required">
+						<textarea id="indextextarea" name="myComments" id="myComments" rows="4"cols="30"></textarea>
+						<input class="indexinput" id="mySubmit" type="submit" value="Submit" required="required">
 					</div>
-					<div class= gencontent>
+					<div class=gencontent>
 						<div id=menu>
 							<h2 class="h2">Menu</h2>
 							<p class="p">Offering you a rotating selection of specialty and local craft beer, local artisan tea, carbonated juice, kombucha, coffee by <a href="https://www.sumpcoffee.com/" alt="Link to Sump Coffee"> Sump</a>, and baked goods by <a href="http://whiskstl.com/" alt="Like to Whisk">Whisk</a> we present to you our menu.<br><br>
@@ -146,20 +146,7 @@
 								</p>
 						</div>
 					</div>
-					<!-- <div class=asidebar>
-						<aside role="complementary">
-							<h3>The Menu</h3>
-								<p class="news">Offering you a rotating selection of specialty and local craft beer, local artisan tea, carbonated juice, kombucha, coffee by <a href="https://www.sumpcoffee.com/" alt="Link to Sump Coffee"> Sump</a>, and baked goods by <a href="http://whiskstl.com/" alt="Like to Whisk">Whisk</a> we present to you our menu.<br><br>
-								<a href="assets/Lulus_Menu_Fall17.pdf" alt="Go to menu"><img src="assets/menu2.png" alt="menu"></a>
-								<p/>
-							<h3>Specials</h3>
-								<p class="news">The <a href="http://newportwildernesssociety.org">
-								Newport Wilderness Society</a> sponsors free meadow hikes at 9am every Saturday. Stop by the park office to register!</p>
-							<h3>Discounts</h3>
-								<p class="news">From time to time, as a treat to our customers, lulu's likes to offer discounts as a thoughtful thanks to our customer for their patronage. <br><br>Click here to see our available discounts now!
-								</p>
-						</aside>
-					</div> -->
+					
 				</div>
 				
 				<div class=footerArea>
