--- a/location.html
+++ b/location.html
@@ -7,7 +7,7 @@
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="styles/location.css">
-	
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	
   </head>
   <body>
