--- a/pingpong.html
+++ b/pingpong.html
@@ -28,8 +28,7 @@
 			</nav>
 		</div>
 				<div class = bodyGrid>
-					<div class=content><p>Located directly above the restaurant, lulu’s ping pong bar is open for ping pong all day and has a full bar from 5pm till midnight
-the bar offers signature and classic cocktails, wine and craft beer on tap email <a href="mailto:luluslocaleatery@gmail.com">Lulu's</a> to reserve the ping pong bar for your next event</p></div>
+					<div class=content><p><b>Located directly above the restaurant, Lulu’s ping pong bar is open for ping pong all day and has a full bar from 5pm till midnight. The bar offers signature and classic cocktails, wine and craft beer on tap email <a href="mailto:luluslocaleatery@gmail.com">Lulu's</a> to reserve the ping pong bar for your next event.</b></p></div>
 					<div class=item></div>
 					<div class=item3></div>
 					<div class=item4></div>
