progress on shopping cart

--- a/order.html
+++ b/order.html
@@ -28,6 +28,7 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a>Shopping cart (<span id="cartNum">0</span>)</a></li>
 				</ul>
 			</nav>
 			<script>
@@ -1914,6 +1915,7 @@
 					<!--End of OrderGrid-->
 					</div>
 				</div>
+				
 						<script>
 						function openTab(tabName) {
 						  var i;
