--- a/order.html
+++ b/order.html
@@ -29,6 +29,7 @@
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a>Shopping cart (<span id="cartNum">0</span>)</a></li>
+					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
 			</nav>
 			<script>
